--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -9,79 +9,80 @@ services:
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_DB: evalink_db
+      PGDATA: /var/lib/postgresql/data/pgdata
     ports:
       - "5438:5432"
     volumes:
-      - postgres_data:/var/lib/postgresql/data
-      - ./init:/docker-entrypoint-initdb.d
+      - postgres_data:/var/lib/postgresql
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d evalink_db"]
+      test: [ "CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d evalink_db" ]
       interval: 5s
       timeout: 5s
       retries: 5
     networks:
       - auth-network
 
+
   # =========================
   # Kafka кластер (KRaft)
   # =========================
   evalink-kafka-1:
-    image: bitnami/kafka:latest
+    image: apache/kafka:3.7.0
     container_name: evalink-kafka-1
     ports:
       - "9092:9092"
     environment:
-      - KAFKA_CFG_NODE_ID=1
-      - KAFKA_KRAFT_CLUSTER_ID=PVjHlx7ESeesq55jeB6Efw
-      - KAFKA_CFG_PROCESS_ROLES=controller,broker
-      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=1@evalink-kafka-1:9091,2@evalink-kafka-2:9091,3@evalink-kafka-3:9091
-      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9090,CONTROLLER://:9091,EXTERNAL://:9092
-      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://evalink-kafka-1:9090,EXTERNAL://${HOSTNAME:-localhost}:9092
-      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,EXTERNAL:PLAINTEXT,PLAINTEXT:PLAINTEXT
-      - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
-      - KAFKA_CFG_INTER_BROKER_LISTENER_NAME=PLAINTEXT
+      KAFKA_NODE_ID: 1
+      KAFKA_PROCESS_ROLES: controller,broker
+      KAFKA_CONTROLLER_QUORUM_VOTERS: 1@evalink-kafka-1:9091,2@evalink-kafka-2:9091,3@evalink-kafka-3:9091
+      KAFKA_LISTENERS: PLAINTEXT://:9090,CONTROLLER://:9091,EXTERNAL://:9092
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://evalink-kafka-1:9090,EXTERNAL://${HOSTNAME:-localhost}:9092
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,EXTERNAL:PLAINTEXT
+      KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+      KAFKA_CLUSTER_ID: PVjHlx7ESeesq55jeB6Efw
     volumes:
-      - kafka1_data:/bitnami/kafka
+      - kafka1_data:/var/lib/kafka/data
     networks:
       - auth-network
 
   evalink-kafka-2:
-    image: bitnami/kafka:latest
+    image: apache/kafka:3.7.0
     container_name: evalink-kafka-2
     ports:
       - "9094:9094"
     environment:
-      - KAFKA_CFG_NODE_ID=2
-      - KAFKA_KRAFT_CLUSTER_ID=PVjHlx7ESeesq55jeB6Efw
-      - KAFKA_CFG_PROCESS_ROLES=controller,broker
-      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=1@evalink-kafka-1:9091,2@evalink-kafka-2:9091,3@evalink-kafka-3:9091
-      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9090,CONTROLLER://:9091,EXTERNAL://:9094
-      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://evalink-kafka-2:9090,EXTERNAL://${HOSTNAME:-localhost}:9094
-      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,EXTERNAL:PLAINTEXT,PLAINTEXT:PLAINTEXT
-      - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
-      - KAFKA_CFG_INTER_BROKER_LISTENER_NAME=PLAINTEXT
+      KAFKA_NODE_ID: 2
+      KAFKA_PROCESS_ROLES: controller,broker
+      KAFKA_CONTROLLER_QUORUM_VOTERS: 1@evalink-kafka-1:9091,2@evalink-kafka-2:9091,3@evalink-kafka-3:9091
+      KAFKA_LISTENERS: PLAINTEXT://:9090,CONTROLLER://:9091,EXTERNAL://:9094
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://evalink-kafka-2:9090,EXTERNAL://${HOSTNAME:-localhost}:9094
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,EXTERNAL:PLAINTEXT
+      KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+      KAFKA_CLUSTER_ID: PVjHlx7ESeesq55jeB6Efw
     volumes:
-      - kafka2_data:/bitnami/kafka
+      - kafka2_data:/var/lib/kafka/data
     networks:
       - auth-network
 
   evalink-kafka-3:
-    image: bitnami/kafka:latest
+    image: apache/kafka:3.7.0
     container_name: evalink-kafka-3
     ports:
       - "9096:9096"
     environment:
-      - KAFKA_CFG_NODE_ID=3
-      - KAFKA_KRAFT_CLUSTER_ID=PVjHlx7ESeesq55jeB6Efw
-      - KAFKA_CFG_PROCESS_ROLES=controller,broker
-      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=1@evalink-kafka-1:9091,2@evalink-kafka-2:9091,3@evalink-kafka-3:9091
-      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9090,CONTROLLER://:9091,EXTERNAL://:9096
-      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://evalink-kafka-3:9090,EXTERNAL://${HOSTNAME:-localhost}:9096
-      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,EXTERNAL:PLAINTEXT,PLAINTEXT:PLAINTEXT
-      - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
-      - KAFKA_CFG_INTER_BROKER_LISTENER_NAME=PLAINTEXT
+      KAFKA_NODE_ID: 3
+      KAFKA_PROCESS_ROLES: controller,broker
+      KAFKA_CONTROLLER_QUORUM_VOTERS: 1@evalink-kafka-1:9091,2@evalink-kafka-2:9091,3@evalink-kafka-3:9091
+      KAFKA_LISTENERS: PLAINTEXT://:9090,CONTROLLER://:9091,EXTERNAL://:9096
+      KAFKA_LISTENER_SECURITY_PROTOCOL_MAP: CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT,EXTERNAL:PLAINTEXT
+      KAFKA_ADVERTISED_LISTENERS: PLAINTEXT://evalink-kafka-3:9090,EXTERNAL://${HOSTNAME:-localhost}:9096
+      KAFKA_CONTROLLER_LISTENER_NAMES: CONTROLLER
+      KAFKA_INTER_BROKER_LISTENER_NAME: PLAINTEXT
+      KAFKA_CLUSTER_ID: PVjHlx7ESeesq55jeB6Efw
     volumes:
-      - kafka3_data:/bitnami/kafka
+      - kafka3_data:/var/lib/kafka/data
     networks:
       - auth-network
 
@@ -157,10 +158,11 @@ services:
     environment:
       - CASSANDRA_CLUSTER_NAME=${CASSANDRA_CLUSTER_NAME}
       - CASSANDRA_DC=${CASSANDRA_LOCAL_DATACENTER}
-      - CASSANDRA_LISTEN_ADDRESS=0.0.0.0
       - CASSANDRA_BROADCAST_ADDRESS=cassandra
-      - CASSANDRA_ENDPOINT_SNITCH=GossipingPropertyFileSnitch
+      - CASSANDRA_SEEDS=cassandra
       - CASSANDRA_START_RPC=true
+      - MAX_HEAP_SIZE=512M
+      - HEAP_NEWSIZE=128M
     volumes:
       - cassandra_data:/var/lib/cassandra
     healthcheck:
@@ -170,6 +172,7 @@ services:
       retries: 10
     networks:
       - auth-network
+
 
 # =========================
 # Volumes
